syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int64 max_results = 3;
}

